--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,42 @@ name: Release
 
 on:
   workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Cache Cargo dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache Node.js dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+              - name: Cache Gradle dependencies
+              uses: actions/cache@v4
+              with:
+                path: |
+                  ~/.gradle/caches
+                  ~/.gradle/wrapper
+                key: ${{ runner.os }}-gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+                restore-keys: |
+                  ${{ runner.os }}-gradle-              
+
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -64,11 +94,11 @@ jobs:
         run: |
           npm run tauri android build 
 
-      - name: Upload ABI-Specific APKs
+      - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
           name: tauri-android-abi-apks
-          path: src-tauri/gen/android/app/build/outputs/apk/**/*.apk
+          path: src-tauri/gen/android/app/build/outputs/apk/**/release/*.apk
 
 
       - name: Upload Universal APK
