--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Build or Release
 
 on:
   workflow_dispatch:
@@ -99,7 +99,17 @@ jobs:
         with:
           name: tauri-android-abi-apks
           path: src-tauri/gen/android/app/build/outputs/apk/**/release/*.apk
-          archive: false 
+
+      - name: Upload APKs to Release
+        if: ${{ github.event_name == 'release' }} # Add this condition
+        run: |
+          for apk in src-tauri/gen/android/app/build/outputs/apk/**/release/*.apk; do
+            asset_name=$(basename "$apk")
+            echo "Uploading $asset_name"
+            gh release upload ${{ github.event.release.tag_name }} "$apk" --name "$asset_name" --clobber
+          done
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
 
