--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,10 +77,10 @@ jobs:
         if: ${{ github.event_name == 'release' }} 
         run: |
           for apk in src-tauri/gen/android/app/build/outputs/apk/**/release/*.apk; do
-            gh release upload ${{ github.event.release.tag_name }} $apk
+            gh release upload ${{ github.event.release.tag_name }} "$apk"
           done
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.UPLOAD_RELEASE }}
 
 
 
