--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tauri-apps/api": "^2.3.0",
     "@tauri-apps/plugin-http": "^2.3.0",
+    "@tauri-apps/plugin-notification": "^2.2.2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "^2.2.0",
     "lucide-svelte": "^0.477.0",
