--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ base64 = "0.22.1"
 tokio = "1.43.0"
 tauri-plugin-store = "2"
 dirs = "6.0.0"
+tauri-plugin-notification = "2"
 
 [profile.release]
 panic = "abort" # Strip expensive panic clean-up logic
