--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-http = "2"
+tauri-plugin-http = { version = "2", features = ["stream"] }
 scraper = "0.23.1"
 base = "0.1.0"
 base64 = "0.22.1"
@@ -30,6 +30,9 @@ tokio = "1.43.0"
 tauri-plugin-store = "2"
 dirs = "6.0.0"
 tauri-plugin-notification = "2"
+indicatif = "0.17.11"
+futures-util = "0.3.31"
+
 
 [profile.release]
 panic = "abort" # Strip expensive panic clean-up logic
