--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-http = { version = "2", features = ["stream"] }
+tauri-plugin-http = { version = "2", features = ["stream", "multipart"] }
 scraper = "0.23.1"
 base = "0.1.0"
 base64 = "0.22.1"
