--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Install Android SDK
         uses: android-actions/setup-android@v3
+        
+      - name : update path
         run: |
           echo "ANDROID_HOME=$(/home/synaptic/.android/sdk)" >> $GITHUB_ENV
 
