--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install Android NDK
         run: |
           CMDLINE_TOOLS_DIR=$(find "$ANDROID_HOME/cmdline-tools" -maxdepth 1 -type d -name "[0-9]*" | sort -rn | head -n 1)
-          "$CMDLINE_TOOLS_DIR/bin/sdkmanager --install "ndk;28.0.13004108"
+          $CMDLINE_TOOLS_DIR/bin/sdkmanager --install "ndk;28.0.13004108"
           echo "NDK_HOME=${ANDROID_HOME}/ndk/28.0.13004108" >> $GITHUB_ENV 
 
 
