--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -51,7 +51,8 @@ jobs:
         run: |
           echo "JAVA_HOME=$(/usr/lib/jvm/jre/bin/java)" >> $GITHUB_ENV
           echo "ANDROID_HOME=${ANDROID_HOME}" >> $GITHUB_ENV
-          echo "PATH=$ANDROID_HOME/platform-tools:$ANDROID_HOME/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
+          CMDLINE_TOOLS_DIR=$(find "$ANDROID_HOME/cmdline-tools" -maxdepth 1 -type d -name "[0-9]*" | sort -rn | head -n 1)
+          echo "PATH=$ANDROID_HOME/platform-tools:$CMDLINE_TOOLS_DIR/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
           echo "PATH=$ANDROID_HOME/ndk/${NDK_VERSION}:$PATH" >> $GITHUB_ENV
           echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
 
