--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -56,6 +56,7 @@ jobs:
           NDK_VERSION=$(find "$ANDROID_HOME/ndk" -maxdepth 1 -type d -name "[0-9]*" | sort -rn | head -n 1)
           echo "PATH=$NDK_VERSION:$PATH" >> $GITHUB_ENV
           echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
+          echo "NDK_HOME=$NDK_VERSION" >> $GITHUB_ENV
 
       - name: setup Android signing
         run: |
