--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ dirs = "6.0.0"
 tauri-plugin-notification = "2"
 indicatif = "0.17.11"
 futures-util = "0.3.31"
+tauri-plugin-nativeapi = { path = "../tauri-plugin-nativeapi" }
 
 
 [profile.release]
