--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,16 @@ dependencies:
   flutter_rust_bridge: 2.9.0
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  flutter_secure_storage: ^9.2.4
+  riverpod: ^2.6.1
+  go_router: ^14.8.1
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  http: ^1.3.0
+  package_info_plus: ^8.3.0
+  flutter_native_splash: ^2.4.6
+  skeletonizer: ^1.4.3
+
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +60,10 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   integration_test:
     sdk: flutter
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.4.15
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
