--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   package_info_plus: ^8.3.0
   flutter_native_splash: ^2.4.6
   skeletonizer: ^1.4.3
+  sqflite: ^2.4.2
+  path: ^1.9.1
 
 
 dev_dependencies:
