--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   skeletonizer: ^1.4.3
   sqflite: ^2.4.2
   path: ^1.9.1
+  freezed_annotation: ^3.0.0
 
 
 dev_dependencies:
@@ -66,6 +67,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
+  freezed: ^3.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
