--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   freezed_annotation: ^3.0.0
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
