--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
     path: rust_builder
   flutter_rust_bridge: 2.9.0
   flutter_svg: ^2.0.17
-  google_fonts: ^6.2.1
+  google_fonts: ^6.1.0
   flutter_secure_storage: ^9.2.4
   riverpod: ^2.6.1
   go_router: ^15.1.1
@@ -50,6 +50,7 @@ dependencies:
   path: ^1.9.1
   freezed_annotation: ^3.0.0
   shared_preferences: ^2.5.3
+  intl: ^0.19.0
 
 
 dev_dependencies:
