--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   freezed_annotation: ^3.0.0
   shared_preferences: ^2.5.3
   intl: ^0.19.0
+  webview_flutter: ^4.11.0
 
 
 dev_dependencies:
