feat : changed logo

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,6 +15,7 @@ scraper = "0.23.1"
 base = "0.1.0"
 base64 = "0.22.1"
 tokio = "1.43.0"
+urlencoding = "2"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
