--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,13 @@ dev_dependencies:
   riverpod_lint: ^2.6.5
   freezed: ^3.0.6
   drift_dev: ^2.26.1
+  flutter_launcher_icons: "^0.14.3"
+  
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
